--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@ body {
     margin-top: 10px;
 }
 
+.mt-12 {
+    margin-top: 12px;
+}
+
 .mt-24 {
     margin-top: 24px;
 }
@@ -112,6 +116,12 @@ a.text-brand {
     color: var(--text-color);
 }
 
+.medium-header {
+    font-size: 32px;
+    font-weight: var(--fwbold);
+    color: var(--text-color);
+}
+
 .small-text {
     color: var(--text-color);
     font-size: 18px;
@@ -145,4 +155,56 @@ a.text-brand {
     padding: 48px 0px;
     align-items: flex-start;
     gap: 96px;
+}
+
+.bagian-terakhir {
+    display: flex;
+    padding: 48px 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+}
+
+.wrapper-akhir {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    gap: 24px;
+    align-self: stretch;
+    flex-wrap: wrap;
+}
+
+.contentnya {
+    width: 270px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 12px;
+}
+
+.isi-content {
+    display: flex;
+    padding: 0px 12px;
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
+}
+
+.text-content {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    flex: 1 0 0;
+
+    overflow: hidden;
+    color: var(--text-color);
+    text-overflow: ellipsis;
+
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 32px;
 }
