--- a/css/style.css
+++ b/css/style.css
@@ -183,9 +183,10 @@ a.text-brand {
     justify-content: center;
     align-items: flex-start;
     gap: 12px;
+    background: var(--grey-secondary);
 }
 
-.isi-content {
+.judul-content {
     display: flex;
     padding: 0px 12px;
     align-items: center;
@@ -193,7 +194,22 @@ a.text-brand {
     align-self: stretch;
 }
 
-.text-content {
+.isi-content {
+    display: flex;
+    padding: 0px 12px;
+    justify-content: space-between;
+    align-items: center;
+    align-self: stretch;
+}
+
+.isi-content2 {
+    display: flex;
+    width: 192px;
+    align-items: center;
+    gap: 4px;
+}
+
+.text-content-sub {
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 1;
@@ -206,5 +222,21 @@ a.text-brand {
     font-size: 24px;
     font-style: normal;
     font-weight: 700;
+    line-height: 32px;
+}
+
+.text-content {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    flex: 1 0 0;
+
+    overflow: hidden;
+    color: var(--text-color);
+    text-overflow: ellipsis;
+
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
     line-height: 32px;
 }
